@@ -7,6 +7,7 @@ dist_sysconf_DATA += ruckusrd.conf
 pkgdata_DATA =
 pkgdata_DATA += firstboot_wizard
 pkgdata_DATA += linuxrc
+pkgdata_DATA += mount_sysroot
 pkgdata_DATA += ruckusrd.sh
 pkgdata_DATA += ruckusrd-common.sh
 pkgdata_DATA += initramfs.cpio.xz
@@ -21,7 +22,7 @@ install-exec-hook:
 uninstall-local:
 	rm -f $(DESTDIR)$(bindir)/mkinitrd
 
-initramfs.cpio.xz: ../Makefile ruckusrd.prep linuxrc firstboot_wizard ruckusrd.sh ruckusrd-common.sh ../subprojects/busybox.tar ../subprojects/util-linux.tar ../subprojects/eudev.tar ../subprojects/mdadm.tar ../subprojects/lvm2.tar ../subprojects/e2fsprogs.tar ../subprojects/squashfs-tools.tar ../subprojects/zfs.tar ../subprojects/syslinux.tar ../subprojects/dropbear.tar ../subprojects/rsync.tar ../subprojects/efibootmgr.tar ../subprojects/groff.tar ../subprojects/zstd.tar ../subprojects/less.tar
+initramfs.cpio.xz: ../Makefile ruckusrd.prep linuxrc mount_sysroot firstboot_wizard ruckusrd.sh ruckusrd-common.sh ../subprojects/busybox.tar ../subprojects/util-linux.tar ../subprojects/eudev.tar ../subprojects/mdadm.tar ../subprojects/lvm2.tar ../subprojects/e2fsprogs.tar ../subprojects/squashfs-tools.tar ../subprojects/zfs.tar ../subprojects/syslinux.tar ../subprojects/dropbear.tar ../subprojects/rsync.tar ../subprojects/efibootmgr.tar ../subprojects/groff.tar ../subprojects/zstd.tar ../subprojects/less.tar
 	./ruckusrd.prep
 
 
