@@ -370,6 +370,7 @@ EOF
 echo '********** COPYING LINUXRC TO INITRAMFS ****************************************'
 install -vp linuxrc initramfs/init &&
 install -vp firstboot_wizard initramfs/bin/ &&
+install -vp mount_sysroot initramfs/bin/ &&
 cp -va ruckusrd-common.sh initramfs/ &&
 cp -va ruckusrd.sh initramfs/ || exit 1
 
